Refactor: replace imageUrls with ImageDTO list, productColorSizes with ProductColorSizeDTO